webapp/css/style.css
/* ... */
.tableBULabelCS {
    font-size: 1rem !important;
    font-style: italic !important;
    color: #3b617e !important;;
}

.tableColumnCombo>div>input {
    background: transparent !important;
    padding: 0 0.5rem;
    font-weight: bold;
    color: #3b617e;
}

.tableColumnCombo>input {
    background: transparent !important;
    padding: 0 0.5rem;
    font-weight: bold;
    color: #3b617e;
    opacity: 1;
}

.sapUiTableTr>td {
    border-right: .1rem solid rgba(0, 0, 0, 0.29) !important;
    border-bottom: .1rem solid rgba(0, 0, 0, 0.29) !important;
    padding: 0 !important;
    vertical-align: middle !important;
    box-sizing: border-box !important;
}

.sapMLIBShowSeparator>td {
    border-top: none;
}

.employeeListTable>table>thead>.sapMListTblHeader th {
    border-bottom: .1rem solid rgba(0, 0, 0, 0.29);
}

html.sap-desktop * .employeeListTable>table>thead>.sapMListTblHeader th:nth-child(2) {
    border-right: .1rem solid rgba(0, 0, 0, 0.29) !important;
}

.employeeListTable>table>thead>.sapMListTblHeader th:nth-child(1) {
    border-right: .1rem solid rgba(0, 0, 0, 0.29) !important;
}


/*Table data*/


/*Employee*/

.EmpWeekStatus {
    text-align: left;
    padding-left: .75rem;
    /*height: 70px !important;*/
}

.EmpWeekStatus[data-browser='ie'] > div > div > div > .sapMSLITitle {
	width: 15rem !important;
	white-space: normal !important;
}

.EmpWeekStatus[data-browser='nie'] > div > div > div > .sapMSLITitle {
    white-space: initial !important;
}

.EmpWeekStatus>div>div>div>.sapMSLITitle {
    white-space: initial;
}

.EmpWeekStatus>div>div>div {
    white-space: initial !important;
    color: #3b617e !important;
}

.EmpWeekStatus[data-titlelen="Long"] {
    height: 70px !important;
}

.EmpWeekStatus[data-titlelen="Short"] {
    height: 60px !important;
}

.EmpName {
    color: #3b617e !important;
    font-weight: bold !important;
    padding-top: .75rem !important;
}

.EmpWeekDetails {
    color: #3b617e !important;
    font-style: italic !important;
    font-size: 0.7rem !important;
}

.EmpDayDetails {
    font-style: italic !important;
}

.EmpWeekStatus[data-status="S"] {
    background-color: #39a9db !important;
}
.tableColumnCombo>button.sapMComboBoxTextFieldArrow{
	background:rgb(247, 247, 247) !important;
}

.EmpWeekStatus[data-status="D1"] {
    background-color: #e6e7e8 !important;
}
.EmpWeekStatus[data-status=""] {
    background-color: white !important;
}
.EmpWeekStatus[data-status="D"] {
    background-color: #e6e7e8 !important;
}

.EmpWeekStatus[data-status="W"] {
    background-color: #f9cB82 !important;
}

.EmpWeekStatus[data-status="V"] {
    background-color: #00dbc0 !important;
}

.EmpWeekStatus[data-status="R"] {
    background-color: #fc6b8a !important;
}

.EmpDayCheckDialogBG {
	background-color: #fafafa !important;
}

.EmpDayCheckDialogBG>section.sapMDialogSection {
	background-color: #fafafa !important;	
}

/*.hourSize[data-status="D"] {
    background-color: #e6e7e8;
}*/


/*Day Cell*/

.sapMListTblCell {
    padding-top: 0rem !important;
    padding-right: 0rem !important;
    padding-bottom: 0rem !important;
    padding-left: 0rem !important;
    vertical-align: top;
    font-size: 0.875rem;
}

.teamHourSize>span {
    background-color: white !important;
}

.chkSelectionBtnText>span>span {
	color: white !important;
	font-size: 1rem !important;
}

.hourSize {
    padding: 0 !important;
    height: 60px;
}

.hourSize[data-titlelen="Long"] {
    height: 70px;
}

.hourSize>span {
    height: 100% !important;
    padding-left: 0rem !important;
    padding-right: 0rem !important;
}
.hourSize>div {
    height: 100% !important;
    padding-left: 0rem !important;
    padding-right: 0rem !important;
}

.hourSize[data-selectedView="7"]>span>span {
    font-size: 30px !important;
}

.hourSize[data-selectedView="7"]>div>span {
    font-size: 30px !important;
}

.hourSize[data-selectedView="14"]>span>span {
    font-size: 22px !important;
}

.hourSize[data-selectedView="14"]>div>span {
    font-size: 22px !important;
}

.hourSize>span>span {
    padding-top: 10px;
    color: #3b617e !important;
}

.hourSize>div>span {
    padding-top: 10px;
    color: #3b617e !important;
}

.hourSize[data-status="NE"]>span>span {
    background-color: #e6e7e8;
}

.hourSize[data-status="NE"]>div>span {
    background-color: #e6e7e8;
}

.hourSize[data-status="S"]>span>span {
    color: white;
}
.hourSize[data-status="S"]>div>span {
    color: white;
}

.hourSize[data-background="L"] {
    background-color: rgb(232, 241, 246);
}

.hourSize[data-status="S"] {
    background-color: #39a9db;
}

.hourSize[data-status="D1"] {
    background-color: #e6e7e8;
}

.hourSize[data-status="D"] {
    background-color: #e6e7e8;
}

.hourSize[data-status="W"] {
    background-color: #f9cB82;
}

.hourSize[data-status="V"] {
    background-color: #00dbc0;
}

.hourSize[data-status="R"] {
    background-color: #fc6b8a;
}


/*Bottom Legend*/

.DraftL {
    height: 1rem;
    width: 1rem;
    margin-left: 1rem;
    margin-top: 1rem;
    margin-right: .5rem;
    background-color: #e6e7e8 !important;
}

.WaitingL {
    height: 1rem;
    width: 1rem;
    margin-left: 1rem;
    margin-top: 1rem;
    margin-right: .5rem;
    background-color: #f9cB82 !important;
}

.ValidatedL {
    height: 1rem;
    width: 1rem;
    margin-left: 1rem;
    margin-top: 1rem;
    margin-right: .5rem;
    background-color: #00dbc0 !important;
}

.TheoriticalL {
    height: 1rem;
    width: 1rem;
    background-color: rgb(217, 235, 246) !important;
    margin-bottom: .2rem;
}

.NTheoriticalL {
    height: 1rem;
    width: 1rem;
    background-color: rgb(217, 150, 148) !important;
    margin-bottom: .2rem;
}

.RefusedL {
    height: 1rem;
    width: 1rem;
    margin-left: 1rem;
    margin-top: 1rem;
    margin-right: .5rem;
    background-color: #fc6b8a !important;
}

.LLabel {
    font-size: 13px !important;
    color: white;
}

.BottomButton {
    margin-right: 2rem !important;
}
/* ... */

